--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "@testing-library/user-event": "^13.5.0",
     "a": "^3.0.1",
     "autoprefixer": "^10.4.16",
+    "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
+    "dotenv": "^16.4.5",
     "firebase": "^10.7.1",
+    "google-auth-library": "^9.9.0",
+    "googleapis": "^135.0.0",
     "postcss": "^8.4.33",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
