Updated youtube section and server caching

--- a/package.json
+++ b/package.json
@@ -3,24 +3,38 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@gonetone/get-youtube-id-by-url": "^1.0.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@xorddotcom/social-media-analytics": "^2.1.4",
     "a": "^3.0.1",
     "autoprefixer": "^10.4.16",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
+    "fb": "^2.0.0",
     "firebase": "^10.7.1",
+    "fs": "^0.0.1-security",
     "google-auth-library": "^9.9.0",
     "googleapis": "^135.0.0",
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
+    "path": "^0.12.7",
+    "path-browserify": "^1.0.1",
     "postcss": "^8.4.33",
+    "pupeteer": "^0.0.1",
+    "puppeteer": "^22.7.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.0",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
+    "recharts": "^2.12.6",
     "tailwindcss": "^3.4.1",
+    "url": "^0.11.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
