--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@gonetone/get-youtube-id-by-url": "^1.0.1",
+    "@mui/icons-material": "^5.15.16",
+    "@mui/material": "^5.15.16",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@xorddotcom/social-media-analytics": "^2.1.4",
     "a": "^3.0.1",
+    "all": "^0.0.0",
     "autoprefixer": "^10.4.16",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
@@ -28,11 +33,13 @@
     "puppeteer": "^22.7.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.0",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
     "recharts": "^2.12.6",
+    "sass": "^1.76.0",
     "tailwindcss": "^3.4.1",
     "url": "^0.11.3",
     "web-vitals": "^2.1.4"
